# ninja-payments-reconciler

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
scripts/: create_tables.sql
src/: app.py  db.py  settings.py
src/integrations/: crm_client.py
src/integrations/providers/: base.py  paypal.py  stripe.py  webpay.py
src/loops/: crm_sender.py  psp_poller.py
src/repositories/: crm_repo.py  payments_repo.py
src/services/: crm_payloads.py
